# lns-vrp

./: .cspell.json  .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yaml  test.yaml
app/: Cargo.toml
app/benches/: main.rs
app/src/: bin_utility.rs  hash_map.rs  lib.rs  location.rs  problem.rs  solution.rs  solve.rs  stop.rs  trace.rs
app/src/cost/: calculator.rs  distance.rs
app/src/cost/calculator/: delivery.rs
app/src/route/: cached.rs  router.rs
app/src/solve/: branch_and_bound.rs  dynamic_programming.rs  nearest_neighbor.rs  ruin_and_recreate.rs  solver.rs
app/src/solve/snapshots/: vrp__solve__branch_and_bound__tests__keep_two_stops.snap  vrp__solve__branch_and_bound__tests__optimize_stop_order.snap  vrp__solve__dynamic_programming__tests__keep_two_stops.snap
benches/: main.rs
core/: Cargo.toml
core/src/: lib.rs  problem.rs  solution.rs  solver.rs  stop.rs  vehicle.rs
simple/: Cargo.toml
simple/benches/: main.rs
simple/src/: bin_utility.rs  lib.rs  problem.rs  route.rs  solution.rs  solve.rs  vehicle.rs
simple/src/cost/: calculator.rs  distance.rs
simple/src/cost/calculator/: delivery.rs
simple/src/route/: cached.rs  crow.rs
simple/src/solve/: bit_dynamic_programming.rs  branch_and_bound.rs  dynamic_programming.rs  nearest_neighbor.rs  ruin_and_recreate.rs
simple/src/solve/snapshots/: vrp__solve__branch_and_bound__tests__keep_three_stops.snap
src/: bin_utility.rs  context.rs  cost.rs  dp.rs  hash_map.rs  intermediate_solution.rs  lib.rs  list.rs  location.rs  problem.rs  route.rs  ruin_and_recreate.rs  solution.rs  solve.rs  solver.rs  stop.rs  trace.rs  utility.rs  vehicle.rs
src/cost/: calculator.rs  distance.rs
src/cost/calculator/: delivery.rs  distance.rs  pickup_and_drop_off.rs
src/dp/: route.rs
src/intermediate_solution/: intermediate_route.rs  route.rs
src/problem/: base.rs  basic.rs  simple.rs
src/route/: cached.rs  crow.rs
src/solve/: branch_and_bound.rs  dp.rs  dynamic_programming.rs  nearest_neighbor.rs  nearest_neighbour.rs  ruin_and_recreate.rs  solver.rs
src/solve/snapshots/: vrp__solve__branch_and_bound__tests__keep_two_stops.snap  vrp__solve__dynamic_programming__tests__keep_three_stops.snap  vrp__solve__dynamic_programming__tests__optimize_stop_order.snap
tools/: profile.sh
