[package]
name = "vrp"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.3", default-features = false }
bumpalo = { version = "3.13.0", features = ["allocator_api"] }
dhat = "0.3.2"
geo = "0.26.0"
ordered-float = "3.9.1"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.5.1"
insta = "1.31.0"
pretty_assertions = "1.4.0"

[features]
trace = []

[[bin]]
name = "dynamic_programming"

[[bin]]
name = "ruin_and_recreate"

[[bin]]
name = "heap_allocation"

[[bench]]
name = "main"
harness = false
