[package]
name = "lns-vrp-app"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.3", default-features = false }
bumpalo = { version = "3.14.0", features = ["allocator_api"] }
geo = "0.26.0"
geojson = "0.24.1"
itertools = "0.11.0"
ordered-float = "4.1.1"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
criterion = "0.5.1"
insta = "1.34.0"
pretty_assertions = "1.4.0"

[features]
trace = []

[[bench]]
name = "main"
harness = false
