[package]
name = "lns-vrp-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", default-features = false }
bumpalo = { version = "3.19.0", features = ["allocator_api"] }
core = { package = "lns-vrp-core", path = "../core" }
geo = "0.31.0"
geojson = "0.24.2"
itertools = "0.14.0"
ordered-float = "5.0.0"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = "0.7.0"
insta = "1.41.1"
pretty_assertions = "1.4.1"

[features]
trace = []

[[bench]]
name = "main"
harness = false

[lints]
workspace = true
